pricing media query

--- a/projectcss.css
+++ b/projectcss.css
@@ -1483,7 +1483,7 @@ margin: 0%;
 
     }
     .col{
-        margin-left: 10px;
+        margin: auto;
         width:300px;
     }
     .pricingheading{
