--- a/projectcss.css
+++ b/projectcss.css
@@ -1254,6 +1254,13 @@ margin: 0%;
         margin: 0%;
         height:500px;
     }
+    .formtitle {
+
+        color: white;
+        font-family: "Roboto", sans-serif !important;
+        margin: 0px 27px 35px;
+    
+    }
 
     .blog {
        width:100%;
@@ -1901,7 +1908,7 @@ margin: 0%;
     .column1 {
         width:320px;
         padding: 0px;
-        margin: 0px;
+        margin: auto;
         
     }
     .post{
